always parse URL in WebURL, so that there's always a valid URI object available.